# plan2

./: .env.example  .gitignore  Cargo.toml  claude_desktop_config.example.json  mcp_server.py  test_mesh.sh  xpipe-mcp-skill.md
.github/workflows/: rust.yml
src/: handlers.rs  main.rs  models.rs  peer_discovery.rs  plan.md
